# free_energy_FEM

./: .gitignore  README.md  add_current_scalar.py  add_flux.py  colab_setup_instructions.md  create_checkpoint.py  current_calculation.ipynb  data_analyze.ipynb  debug_cpp_simulation.py  debug_pong_context.py  original_pong_current_data.ipynb  pong_scoring.ipynb  requirements.txt  run_simulation_gpu.py  set_pypath.sh  test_backend.py  test_cpp_integration.py  test_csr_assembly.py  test_cupy_sparse_formats.py
cpp_fem_core/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  benchmark.py  build_and_test.ps1  build_and_test.sh  environment.yml  integration_example.py  test_flux_calculator.py  test_python_bindings.py
cpp_fem_core/src/: CurrentCalculator.cpp  CurrentCalculator.hpp  FluxCalculator.cpp  FluxCalculator.hpp  HDF5Reader.hpp  HDF5Writer.hpp  NPENSimulation.cpp  NPENSimulation.hpp  TetrahedralMesh.cpp  TetrahedralMesh.hpp  pybind_module.cpp
cpp_fem_core/test/: test_simulation.cpp
gameplay/: analyze.ipynb  analyze_rle.py  ball_position_tracking.csv  pong_game.py
metasimulation/: gridsearch.py  gridsearch_colab.py  memory_experiment.py  memory_experiment2.py  memory_experiment_surface.py  requirements-gridsearch  run_from_checkpoint.py
metasimulation/experiments/: README.md
metasimulation/experiments/rl_exp/: negativity_for_rl.py  scramblevsidle.py
metasimulation/experiments/short_run_memory/: README.md  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py
output/fickian_diffusion/: README.md
output/flory_huggins/: README.md
output/gibbs_free_energy/: README.md
output/nernst_planck_poisson/: README.md
output/todos/: README.md  TODOs.md  notes.md
pong_simulation/: colab_npen_simulation.py  hybrid_npen_simulation.py  pong_sim_npen.py  pong_simulation.py
scripts/: batch_create_checkpoints.py
simulations/: 3D_electrode_npp.py  NPENwithFOReaction.py  NPPwithFOReaction.py  electrode_3d_npen.py  electrode_3d_npp.py  electrode_npp.py  electrodes_memory_npen.py  electrodes_memory_npen_surface.py  fickian_1DDiffusion_fem.py  fickian_2DDiffusion_fem.py  gibbs_n_species.py  npen_fem.py  npp_water_fem.py
simulations/fenics/: fh_fenics.py  npp_fenics.py
simulations/physics/: chemical_potential.py
simulations/test_npp/: npp_no_water_fem.py  poisson_test.py
utils/: backend.py  fem_matrices.py  fem_mesh.py  init_conditions.py  temporal_voltages.py
visualization/: 1d_fickian_visualization.py  2d_fickian_visualization.py  3D_visualization.ipynb  electrode_3d_npen_visualization.py  electrode_3d_visualization.py  export_pong_xdmf.py  free_energy_visualization.py  gibbs_2s_visualization.py  npp_npz_visualization.py  npp_visualization.py  plot_position_space.py  pong_plot_free_energy.py  pong_replay.py  pong_time_lag_correlation.py  view_h5_structure.py  visualize_init_conditions.py  visualize_mesh.py
